# renegade

./: Cargo.toml  Dockerfile  README.md  Trunk.toml  index.html
.github/workflows/: ci.yml  deploy.yml
src/: constants.rs  lib.rs
src/audio/: mod.rs  native.rs  web.rs
src/game/: entities.rs  mod.rs  physics.rs  state.rs  systems.rs
src/input/: keyboard.rs  mod.rs
src/rendering/: mod.rs  renderer.rs
www/: index.html  nginx.conf  nginx.config
www/ssl/: selfsigned.crt  selfsigned.key
