[package]
name = "renegade"
version = "0.1.0"
edition = "2021"  # Note: should be 2021, not 2024

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document", 
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Window",
    "KeyboardEvent",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"  # Add this for better error messages

[profile.release]
opt-level = "s"
lto = true