###############################################################################
# Renegade – Cargo manifest
###############################################################################

[package]
name    = "renegade"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]              # wasm-bindgen needs a cdylib

###############################################################################
# 1. COMMON DEPENDENCIES (built for every target)
###############################################################################

[dependencies]
wasm-bindgen             = "0.2"
wasm-bindgen-futures     = "0.4"
js-sys                   = "0.3"
console_error_panic_hook = "0.1.7"
once_cell                = "1"       # for audio::AUDIO Lazy static

# 1-a.  OPTIONAL native-only audio backend (Rodio)
[dependencies.rodio]
version           = "0.18"
default-features  = false
features          = ["flac", "wav", "mp3"]
optional          = true

###############################################################################
# 2. WEB-SYS FEATURE BUNDLE - FIXED
###############################################################################

[dependencies.web-sys]
version  = "0.3"
features = [
  # Web Audio - CORRECTED
  "AudioContext", 
  "AudioDestinationNode", 
  "AudioNode",
  "AudioBuffer",  
  "AudioBufferSourceNode", 
  "HtmlAudioElement",
  "HtmlMediaElement",
  "GainNode",
  "OscillatorNode",
  "OscillatorType",
  "AudioParam",
  "BiquadFilterNode",
  "BiquadFilterType",
  # Fetch API
  "Request", 
  "RequestInit", 
  "RequestMode", 
  "Response",
  # DOM / Canvas / Input
  "Window", 
  "Document", 
  "HtmlCanvasElement",
  "CanvasRenderingContext2d", 
  "KeyboardEvent",
  "Element", 
  "HtmlElement",
  "Event",
  # JS console
  "console",
]

###############################################################################
# 3. FEATURE FLAGS
###############################################################################

[features]
default = []            # keeps browser build lean
native  = ["rodio"]     # desktop build:  cargo run --features native

###############################################################################
# 4. TARGET-SPECIFIC DEPENDENCIES
###############################################################################

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-utils = "0.2"

###############################################################################
# 5. RELEASE PROFILE TWEAKS
###############################################################################

[profile.release]
opt-level = "s"         # smaller WASM
lto       = true